Fixed layout issues, img sizes on smaller screens

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
     font-weight: 400;
     font-style: normal;
 }
-
 html {
     scroll-behavior: smooth;
     scroll-padding: 6rem;
@@ -246,6 +245,7 @@ li {
 .main p {
     padding: 0 1rem;
     text-align: center;
+    width: 50%;
 }
 
 .main-text {
@@ -367,7 +367,7 @@ a:hover {
 
 @media screen and (min-width: 320px) {
     .img {
-        width: 100%;
+        width: 50%;
     }
 
     .main p {
@@ -387,6 +387,12 @@ a:hover {
 
     .project-info {
         flex-direction: column;
+        align-items: center;
+    }
+
+    h1
+    {
+        text-align: center;
     }
 
 
@@ -403,5 +409,13 @@ a:hover {
     .project-info {
         display: flex;
         flex-direction: row;
+        justify-items: left;;
+        align-items:self-start;
+        width: 75%;
+    }
+
+    h1
+    {
+        text-align: left;
     }
 }
